--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
   })(document.getElementById('pinkboard'));
 </script>
 <div class="namebox">
-  <h1>小宇同学&#10084;&#65039;小慧同学</h1>
+  <h1>小慧同学&#10084;&#65039;小宇同学</h1>
 </div>
 </body>
 </html>
